<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">CoffeeOrder</string>
    <string name="toppings">Toppings</string>
    <string name="chocolate_topping">Chocolate Topping</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Satyaki">%s</xliff:g></string>
    <string name="name">Name</string>
    <string name="order">Order</string>
    <string name="thank_you">Thank You</string>

</resources>
