<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords"/>


        <TextView
            android:text="@string/toppings"
            style="@style/HeaderTextStyle"/>

        <CheckBox
            android:id="@+id/chocolate_topping_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/chocolate_topping"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/whipped_cream"
            android:layout_marginBottom="16dp"
            android:textSize="20sp" />

        <TextView
            android:text="@string/quantity"
            style="@style/HeaderTextStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:onClick="decrement"
                android:text="-"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:onClick="increment"
                android:text="+"
                android:textSize="20sp" />
        </LinearLayout>

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="16dp"-->
            <!--android:text="order summary"-->
            <!--android:textAllCaps="true"-->
            <!--android:textColor="@android:color/darker_gray"-->
            <!--android:textSize="20sp" />-->

        <!--<TextView-->
            <!--android:id="@+id/order_summary_text_view"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="$0"-->
            <!--android:textColor="@android:color/black"-->
            <!--android:textSize="20sp" />-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order" />
    </LinearLayout>
</ScrollView>


